chore: replace '~' with '$HOME' on reload configuration display message

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,7 +2,7 @@ set-option -g default-shell /bin/zsh
 set-option -g detach-on-destroy off
 
 unbind r
-bind r source-file ~/.tmux.conf\; display-message 'source-file ~/.tmux.conf'
+bind r source-file ~/.tmux.conf\; display-message 'source-file $HOME/.tmux.conf'
 
 bind-key g set-window-option synchronize-panes\; display-message 'pane_synchronized=#{?pane_synchronized,on,off}'
 
