--- a/Code/User/settings.json
+++ b/Code/User/settings.json
@@ -22,7 +22,8 @@
     "breadcrumbs.enabled": false,
     "editor.stickyScroll.enabled": false,
     "editor.minimap.enabled": false,
-    "editor.fontFamily": "'JetBrains Mono'",
+    "editor.fontFamily": "'MonoLisa'",
+    // "editor.fontFamily": "'JetBrains Mono'",
     "editor.tokenColorCustomizations": {
         "textMateRules": [
             {
@@ -41,6 +42,8 @@
     "terminal.integrated.defaultProfile.windows": "Git Bash",
     "terminal.integrated.defaultProfile.linux": "zsh",
     //
+    "git.autofetch": "all",
+    //
     "editor.codeActionsOnSave": {
         "source.fixAll": "always",
         "source.sortImports": "always",
@@ -49,7 +52,11 @@
     "emmet.triggerExpansionOnTab": true,
     "files.trimFinalNewlines": true,
     "files.trimTrailingWhitespace": true,
-    "javascript.updateImportsOnFileMove.enabled": "always",
+    "files.associations": {
+        "*.embeddedhtml": "html",
+        ".env*": "dotenv", // dotenv.dotenv-vscode
+        "*.qss": "css"
+    },
     "editor.codeLens": false,
     "editor.linkedEditing": true,
     "editor.formatOnSave": true,
@@ -60,15 +67,23 @@
     "editor.quickSuggestions": {
         "other": "off",
         "comments": "off",
-        "strings": "off"
+        "strings": "on"
     },
     "emmet.syntaxProfiles": {
-        "blade": "html"
+        "blade": "html",
+        "qss": "css"
     },
     "emmet.includeLanguages": {
         "blade": "html",
-        // "vue": "html"
+        "qss": "css"
     },
+    //
+    "blade.format.enable": true,
+    "python.analysis.fixAll": [
+        "source.convertImportFormat",
+        "source.unusedImports"
+    ],
+    "javascript.updateImportsOnFileMove.enabled": "always",
     //
     "[blade]": {
         "editor.defaultFormatter": "shufo.vscode-blade-formatter",
@@ -87,15 +102,11 @@
         "editor.defaultFormatter": "ms-python.black-formatter"
     },
     // bmewburn.vscode-intelephense-client
+    // devsense.phptools-vscode
     "php.suggest.basic": false,
     // christian-kohler.path-intellisense
     "typescript.suggest.paths": false,
     "javascript.suggest.paths": false,
-    // dotenv.dotenv-vscode
-    "files.associations": {
-        "*.embeddedhtml": "html",
-        ".env*": "dotenv"
-    },
     // bradlc.vscode-tailwindcss
     "tailwindCSS.emmetCompletions": true,
     // mehedidracula.php-namespace-resolver
@@ -105,31 +116,23 @@
     "material-icon-theme.folders.theme": "classic",
     // streetsidesoftware.code-spell-checker
     // streetsidesoftware.code-spell-checker-portuguese
-    "cSpell.language": "en-GB,pt-PT,lorem",
+    "cSpell.language": "en-GB,en-US,pt-PT,lorem",
     "cSpell.enabledLanguageIds": [
         "*"
     ],
     "cSpell.useGitignore": false,
     // dotenv.dotenv-vscode
     "dotenv.enableAutocloaking": false,
-    // ms-python.python
-    // ms-python.vscode-pylance
-    "python.analysis.fixAll": [
-        "source.convertImportFormat",
-        "source.unusedImports"
-    ],
-    //
+    // open-southeners.laravel-pint
     "laravel-pint.enable": true,
-    //
-    "vscode_custom_css.imports": [],
-    // ...
-    "blade.format.enable": true,
-    "security.workspace.trust.untrustedFiles": "open",
-    "git.autofetch": true,
-    "codesnap.showWindowControls": false,
-    "codesnap.backgroundColor": "#ea4335",
-    "codesnap.containerPadding": "5em 3em",
+    "laravel-pint.fallbackToGlobalBin": false,
+    // adpyke.codesnap
+    "codesnap.backgroundColor": "#d19a66",
+    "codesnap.containerPadding": "1.5rem",
     "codesnap.realLineNumbers": true,
     "codesnap.showLineNumbers": false,
-    "codesnap.boxShadow": "rgba(0, 0, 0, 0.55) 0px 6px 24px",
+    "codesnap.boxShadow": "rgba(0, 0, 0, 0.55) 0px 0.5rem 0.5rem",
+    "codesnap.showWindowControls": false,
+    "codesnap.target": "window",
+    // ...
 }
