--- a/ghostty/config
+++ b/ghostty/config
@@ -2,6 +2,7 @@ shell-integration = zsh
 initial-command = "tmux attach || tmux new"
 gtk-titlebar = false
 window-padding-x = 4
+window-padding-y = 4
 window-padding-balance = true
 font-family = "JetBrainsMono Nerd Font"
 font-size = 13
