--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,4 @@
+set -g default-terminal "screen-256color"
 set-option -g default-shell /bin/zsh
 set-option -g detach-on-destroy off
 
@@ -14,6 +15,10 @@ bind % split-window -h -c "#{pane_current_path}"
 
 unbind-key c
 bind c new-window -c "#{pane_current_path}"
+
+set-option -g focus-events on
+
+set-option -sg escape-time 10
 
 set -g mouse on
 
