--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -5,7 +5,6 @@ TERM = "xterm-256color"
 padding.x = 4
 padding.y = 4
 dynamic_padding = true
-startup_mode = "Maximized"
 dynamic_title = true
 decorations_theme_variant = "Dark"
 
@@ -20,5 +19,4 @@ size = 12
 save_to_clipboard = true
 
 [terminal.shell]
-program = "/bin/zsh"
-args = ["-l", "-c", "tmux attach >/dev/null 2>&1 ||  tmux new"]
+program = "/usr/bin/zsh"
