--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,5 @@
-set -g default-terminal "screen-256color"
+set -g default-terminal "${TERM}"
+set -as terminal-features ",${TERM}:RGB"
 set-option -g default-shell /bin/zsh
 set-option -g detach-on-destroy off
 
