--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,26 @@
+# ---
 set -g default-terminal "${TERM}"
 set -as terminal-features ",${TERM}:RGB"
-set-option -g default-shell /bin/zsh
+
+set-option -g default-shell /usr/bin/zsh
+
 set-option -g detach-on-destroy off
 
+set -g mouse on
+
+set-option -g focus-events on
+
+set-option -sg escape-time 0
+
+setw -g mode-keys vi
+
+set -g base-index 1
+setw -g pane-base-index 1
+set-option -g renumber-windows on
+
+set-option -g status-right '#{window_index}:#{window_name}'
+
+# ---
 unbind r
 bind r source-file ~/.tmux.conf\; display-message 'source-file $HOME/.tmux.conf'
 
@@ -16,17 +34,3 @@ bind % split-window -h -c "#{pane_current_path}"
 
 unbind-key c
 bind c new-window -c "#{pane_current_path}"
-
-set-option -g focus-events on
-
-set-option -sg escape-time 10
-
-set -g mouse on
-
-setw -g mode-keys vi
-
-set -g base-index 1
-setw -g pane-base-index 1
-set-option -g renumber-windows on
-
-set-option -g status-right '#{window_index}:#{window_name}'
