--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,3 +1,8 @@
+[alias]
+lk = log --graph --topo-order --abbrev-commit --date=short --decorate --all --boundary --pretty=format:'%Cgreen%ad %Cred%h%Creset -%C(yellow)%d%Creset %s %Cblue[%cn]%Creset'
+unstage = reset HEAD
+undo-commit = reset --soft HEAD^
+
 [core]
 ; editor = code --wait
 editor = nvim
