--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -22,7 +22,7 @@ set-option -g status-right '#{window_index}:#{window_name}'
 
 # ---
 unbind r
-bind r source-file ~/.tmux.conf\; display-message 'source-file $HOME/.tmux.conf'
+bind r source-file ~/.config/tmux/tmux.conf\; display-message 'source-file $HOME/tmux/tmux.conf'
 
 bind-key g set-window-option synchronize-panes\; display-message 'pane_synchronized=#{?pane_synchronized,on,off}'
 
