chore(ghostty): update config

--- a/ghostty/config
+++ b/ghostty/config
@@ -3,8 +3,8 @@ font-size = 13
 window-padding-x = 4
 window-padding-y = 4
 window-padding-balance = true
-window-theme = dark
-window-decoration = true
-shell-integration = zsh
+window-theme = "dark"
+window-decoration = "auto"
+shell-integration = "zsh"
 gtk-titlebar = false
 term = "xterm-256color"
