chore(code): enable zls language server

--- a/code/settings.json
+++ b/code/settings.json
@@ -141,6 +141,8 @@
     "codesnap.realLineNumbers": false,
     // ritwickdey.liveserver
     "liveServer.settings.NoBrowser": true,
+    // ziglang.vscode-zig
+    "zig.zls.enabled": "on",
     // vscodevim.vim
     "vim.easymotion": true,
     "vim.hlsearch": true,
