--- a/code/settings.json
+++ b/code/settings.json
@@ -121,9 +121,9 @@
     // streetsidesoftware.code-spell-checker
     // streetsidesoftware.code-spell-checker-portuguese
     "cSpell.language": "en-GB,en-US,pt-PT,lorem",
-    "cSpell.enabledLanguageIds": [
-        "*"
-    ],
+    "cSpell.enabledFileTypes": {
+        "*": true
+    },
     "cSpell.useGitignore": false,
     // dotenv.dotenv-vscode
     "dotenv.enableAutocloaking": false,
