chore(tmux): tell tmux to update terminal titles

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,12 +5,13 @@ set -as terminal-features ",${TERM}:RGB"
 set-option -g default-shell /usr/bin/zsh
 
 set-option -g detach-on-destroy off
+set-option -sg escape-time 0
+
+set -g set-titles on
 
 set -g mouse on
 
 set-option -g focus-events on
-
-set-option -sg escape-time 0
 
 setw -g mode-keys vi
 
