--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,7 @@
 # ---
 set -g default-terminal "${TERM}"
 set -as terminal-features ",${TERM}:RGB"
+set-option -ga terminal-overrides ",${TERM}:RGB"
 
 set-option -g default-shell /usr/bin/zsh
 
