--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -227,16 +227,6 @@
         },
         {
             "before": [
-                "<leader>",
-                "<leader>"
-            ],
-            "commands": [
-                "workbench.action.quickOpen",
-            ],
-            "silent": true
-        },
-        {
-            "before": [
                 "<S-k>",
             ],
             "commands": [
@@ -273,6 +263,26 @@
             ],
             "commands": [
                 "editor.action.marker.next"
+            ],
+            "silent": true
+        },
+        {
+            "before": [
+                "<leader>",
+                "e"
+            ],
+            "commands": [
+                "workbench.action.toggleSidebarVisibility",
+            ],
+            "silent": true
+        },
+        {
+            "before": [
+                "<leader>",
+                "<leader>"
+            ],
+            "commands": [
+                "workbench.action.quickOpen",
             ],
             "silent": true
         },
