--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,10 +1,11 @@
 font-family = "JetBrainsMono Nerd Font"
 font-size = 13
-# window-padding-x = 4
-# window-padding-y = 4
+window-padding-x = 4
+window-padding-y = 4
 window-padding-balance = true
 window-decoration = "server"
 window-theme = "dark"
+confirm-close-surface = false
 shell-integration = "zsh"
 gtk-titlebar = false
 term = "xterm-256color"
