--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,4 +1,5 @@
 font-family = "JetBrainsMono Nerd Font"
+font-feature = -calt, -liga, -dlig
 font-size = 13
 window-padding-x = 4
 window-padding-y = 4
