--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,13 +1,13 @@
-font-family = "JetBrainsMono Nerd Font"
+font-family = JetBrainsMono Nerd Font
 font-feature = -calt, -liga, -dlig
 font-size = 13
 window-padding-x = 4
 window-padding-y = 4
 window-padding-balance = true
-window-decoration = "server"
-window-theme = "dark"
+window-decoration = server
+window-theme = dark
 confirm-close-surface = false
-shell-integration = "zsh"
+shell-integration = zsh
 gtk-titlebar = false
-term = "xterm-256color"
+term = xterm-256color
 
