chore(code): disable extensions auto update

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -1,6 +1,7 @@
 {
-    "update.mode": "none",
     "telemetry.telemetryLevel": "off",
+    "update.mode": "none",
+    "extensions.autoUpdate": false,
     //
     "window.commandCenter": false,
     "window.menuBarVisibility": "toggle",
