chore(tmux): update .tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,38 +1,46 @@
-# ---
 set -g default-terminal "${TERM}"
+set -sg escape-time 0
+set -g focus-events on
 set -as terminal-features ",${TERM}:RGB"
-set-option -ga terminal-overrides ",${TERM}:RGB"
-
-set-option -g default-shell /usr/bin/zsh
-
-set-option -g detach-on-destroy off
-set-option -sg escape-time 0
-
-set -g set-titles on
-
-set -g mouse on
-
-set-option -g focus-events on
-
-setw -g mode-keys vi
-
+set -ag terminal-overrides ",${TERM}:RGB"
 set -g base-index 1
+set -g bell-action any
+set -g default-shell /usr/bin/zsh
+set -g detach-on-destroy off
+set -g history-limit 10000
+set -g mouse on
+set -g renumber-windows on
+set -g set-titles on
+set -g status-keys vi
+set -g status-right '#{pane_pid}'
+setw -g aggressive-resize on
+setw -g mode-keys vi
 setw -g pane-base-index 1
-set-option -g renumber-windows on
-
-set-option -g status-right '#{window_index}:#{window_name}'
 
 # ---
 unbind r
-bind r source-file ~/.config/tmux/tmux.conf\; display-message 'source-file $HOME/tmux/tmux.conf'
+bind r source-file ~/.tmux.conf\; display-message 'source-file $HOME/.tmux.conf'
 
-bind-key g set-window-option synchronize-panes\; display-message 'pane_synchronized=#{?pane_synchronized,on,off}'
+bind g set-window-option synchronize-panes\; display-message 'pane_synchronized=#{?pane_synchronized,on,off}'
 
-unbind-key '"'
-bind '"' split-window -v -c "#{pane_current_path}"
+# unbind '"'
+# bind '"' split-window -v -c "#{pane_current_path}"
+bind | split-window -h -c "#{pane_current_path}"
 
-unbind-key %
-bind % split-window -h -c "#{pane_current_path}"
+# unbind %
+# bind % split-window -h -c "#{pane_current_path}"
+unbind -
+bind - split-window -v -c "#{pane_current_path}"
 
-unbind-key c
+unbind c
 bind c new-window -c "#{pane_current_path}"
+
+unbind ,
+bind , command-prompt -p "(rename-window '#W')" "rename-window '%%'"
+
+unbind '$'
+bind '$' command-prompt -p "(rename-session '#S')" "rename-session '%%'"
+
+unbind f
+bind f command-prompt -p "(find-window)" "find-window -N '%%'"
+
