chore(core): require prettier config file

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -285,5 +285,7 @@
     "extensions.experimental.affinity": {
         "vscodevim.vim": 2
     },
+    // esbenp.prettier-vscode
+    "prettier.requireConfig": true,
     // ...
 }
